--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
 coreapi==2.3.3
-drf-yasg==1.21.7
 django-cors-headers==4.3.1
-djangorestframework==3.15.1
+djangorestframework-simplejwt==5.3.1
+drf-yasg==1.21.7
 pip-chill==1.0.3
